--- a/app/src/main/res/layout/addnewiamge_layout.xml
+++ b/app/src/main/res/layout/addnewiamge_layout.xml
@@ -8,11 +8,13 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView_addimage"
         android:layout_width="150dp"
-        android:layout_height="100dp">
+        android:layout_height="150dp"
+        android:layout_margin="5dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
