--- a/app/src/main/res/layout/custom_grid_layout.xml
+++ b/app/src/main/res/layout/custom_grid_layout.xml
@@ -6,6 +6,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
+        android:layout_margin="5dp"
         android:layout_width="150dp"
         android:layout_height="150dp">
         <ImageView
