--- a/app/src/main/res/layout/custom_grid_layout.xml
+++ b/app/src/main/res/layout/custom_grid_layout.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
+            android:id="@+id/upperTriangle"
             android:visibility="visible"/>
         </FrameLayout>
     </android.support.v7.widget.CardView>
